# ros_arduino_encoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  test.py
arduino files/: arduinouno_stepper.ino  esp32_encoder.ino
arduino files/arduinouno_stepper/: arduinouno_stepper.ino
arduino files/esp32_encoder/: esp32_encoder.ino
config/: params.json
include/ros_arduino_encoder/: ros_arduino_encoder.hpp  ros_stepper_controller.hpp
launch/: ros_arduino_encoder.launch
src/: ros_arduino_encoder.cpp  ros_arduino_encoder_node.cpp  ros_stepper_controller.cpp
